==> MilanPi/C5_cascading_examples/C562_GPIO_test/C562_GPIO_test_cmake/stm32c5xx_drivers/hal/stm32c5xx_hal_gpio.c <==
#include "stm32_hal.h"
#define GPIO_NUMBER           (16U) /*!< GPIO port pins number  */
#define GET_GPIO_CLK_ENABLE_BIT(port) ((1UL << (((port) & 0x03F00U) >> 10U)) << RCC_AHB2ENR_GPIOAEN_Pos)
#define GPIO_GET_INSTANCE(instance)  ((GPIO_TypeDef *)((uint32_t)(instance)))
#define IS_GPIO_PORT(port)  (((port) == HAL_GPIOA) \
                             || ((port) == HAL_GPIOB) \
                             || ((port) == HAL_GPIOC) \
                             || ((port) == HAL_GPIOD) \
                             || ((port) == HAL_GPIOE) \
                             || ((port) == HAL_GPIOF) \
                             || ((port) == HAL_GPIOG) \
                             || ((port) == HAL_GPIOH))
#define IS_GPIO_PORT(port)  (((port) == HAL_GPIOA) \
                             || ((port) == HAL_GPIOB) \
                             || ((port) == HAL_GPIOC) \
                             || ((port) == HAL_GPIOD) \
                             || ((port) == HAL_GPIOE) \
                             || ((port) == HAL_GPIOH))
#define IS_GPIO_PIN(pin)        ((((uint32_t)(pin) & HAL_GPIO_PIN_ALL) != 0x00U) \
                                 && (((uint32_t)(pin) & ~HAL_GPIO_PIN_ALL) == 0x00U))

hal_status_t  HAL_GPIO_Init(hal_gpio_t gpiox, uint32_t pins, const hal_gpio_config_t *p_config)
{
  GPIO_TypeDef  *p_gpio;

  uint32_t tmp_pins_msk;
  uint32_t mode;
  uint32_t alternate;
  uint32_t position;
  uint32_t iocurrent;
  uint32_t io_msk;

  ASSERT_DBG_PARAM(IS_GPIO_PORT(gpiox));
  ASSERT_DBG_PARAM(IS_GPIO_PIN(pins));
  ASSERT_DBG_PARAM(p_config != NULL);
  ASSERT_DBG_PARAM(IS_GPIO_MODE(p_config->mode));

#if defined(USE_HAL_CHECK_PARAM) && (USE_HAL_CHECK_PARAM == 1)

  if (p_config == NULL)
  {
    return HAL_INVALID_PARAM;
  }
#endif /* USE_HAL_CHECK_PARAM */

  tmp_pins_msk = pins;
  p_gpio = GPIO_GET_INSTANCE(gpiox);
  mode = (uint32_t)p_config->mode;
  alternate = (uint32_t)p_config->alternate;

  position = POSITION_VAL(tmp_pins_msk);           /* Get the first pin position from the pins mask */
  iocurrent = 1UL << position;                     /* Get the first pin from the pins mask */

#if defined (USE_HAL_GPIO_CLK_ENABLE_MODEL) && (USE_HAL_GPIO_CLK_ENABLE_MODEL > HAL_CLK_ENABLE_NO)
  LL_AHB2_GRP1_EnableClock(GET_GPIO_CLK_ENABLE_BIT((uint32_t)gpiox));
#endif /* USE_HAL_GPIO_CLK_ENABLE_MODEL > HAL_CLK_ENABLE_NO */

  /* Configure the port pins */
  while (tmp_pins_msk != 0U)
  {
    /* The io_mask is identical to the current one */
    io_msk = iocurrent;

    if ((mode == LL_GPIO_MODE_OUTPUT) || (mode == LL_GPIO_MODE_ALTERNATE))
    {
      ASSERT_DBG_PARAM(IS_GPIO_SPEED(p_config->speed));
      ASSERT_DBG_PARAM(IS_GPIO_OUTPUT_TYPE(p_config->output_type));

      LL_GPIO_SetPinSpeed(p_gpio, io_msk, (uint32_t)p_config->speed);

      LL_GPIO_SetPinOutputType(p_gpio, io_msk, (uint32_t)p_config->output_type);

      if (mode == LL_GPIO_MODE_OUTPUT)
      {
        ASSERT_DBG_PARAM(IS_GPIO_PIN_STATE(p_config->init_state));
        if (p_config->init_state != HAL_GPIO_PIN_RESET)
        {
          LL_GPIO_SetOutputPin(p_gpio, io_msk);
        }
        else
        {
          LL_GPIO_ResetOutputPin(p_gpio, io_msk);
        }
      }
    }

    if ((mode != LL_GPIO_MODE_ANALOG) || ((mode == LL_GPIO_MODE_ANALOG) && (p_config->pull != HAL_GPIO_PULL_UP)))
    {
      ASSERT_DBG_PARAM(IS_GPIO_PULL(p_config->pull));

      LL_GPIO_SetPinPull(p_gpio, io_msk, (uint32_t)p_config->pull);
    }

    if (mode == LL_GPIO_MODE_ALTERNATE)
    {
      ASSERT_DBG_PARAM(IS_GPIO_ALTERNATE(p_config->alternate));

      if (io_msk < LL_GPIO_PIN_8)
      {
        LL_GPIO_SetAFPin_0_7(p_gpio, io_msk, alternate);
      }
      else
      {
        LL_GPIO_SetAFPin_8_15(p_gpio, io_msk, alternate);
      }
    }

    LL_GPIO_SetPinMode(p_gpio, io_msk, mode);

    tmp_pins_msk &= (~iocurrent);                   /* Clear the current pin from the pins mask */
    position = POSITION_VAL(tmp_pins_msk);          /* Get the next pin position from the pins mask */
    iocurrent = 1UL << position;                    /* Get the next pin from the pins mask */
  }
  return HAL_OK;
}

void  HAL_GPIO_DeInit(hal_gpio_t gpiox, uint32_t pins)
{
  uint32_t tmp_pins_msk = pins;
  uint32_t position;
  uint32_t iocurrent;
  uint32_t io_msk;

  ASSERT_DBG_PARAM(IS_GPIO_PORT((gpiox)));
  ASSERT_DBG_PARAM(IS_GPIO_PIN(pins));

  GPIO_TypeDef  *p_gpio = GPIO_GET_INSTANCE(gpiox);

  position = POSITION_VAL(tmp_pins_msk);           /* Get the first pin position from the pins mask */
  iocurrent = 1UL << position;                     /* Get the first pin from the pins mask */

  while (tmp_pins_msk != 0U)
  {
    /* The io_mask is identical to the current one */
    io_msk = iocurrent;

    LL_GPIO_SetPinMode(p_gpio, io_msk, LL_GPIO_MODE_ANALOG);

    if (io_msk < LL_GPIO_PIN_8)
    {
      LL_GPIO_SetAFPin_0_7(p_gpio, io_msk, LL_GPIO_AF_0);
    }
    else
    {
      LL_GPIO_SetAFPin_8_15(p_gpio, io_msk, LL_GPIO_AF_0);
    }

    LL_GPIO_SetPinSpeed(p_gpio, io_msk, LL_GPIO_SPEED_FREQ_LOW);

    LL_GPIO_SetPinOutputType(p_gpio, io_msk, LL_GPIO_OUTPUT_PUSHPULL);

    LL_GPIO_SetPinPull(p_gpio, io_msk, LL_GPIO_PULL_NO);

    LL_GPIO_ResetOutputPin(p_gpio, io_msk);

    tmp_pins_msk &= (~iocurrent);                   /* Clear the current pin from the pins mask */
    position = POSITION_VAL(tmp_pins_msk);          /* Get the next pin position from the pins mask */
    iocurrent = 1UL << position;                    /* Get the next pin from the pins mask */
  }
}

hal_gpio_pin_state_t HAL_GPIO_ReadPin(hal_gpio_t gpiox, uint32_t pin)
{
  hal_gpio_pin_state_t state;

  ASSERT_DBG_PARAM(IS_GPIO_PORT(gpiox));
  ASSERT_DBG_PARAM(IS_GPIO_SINGLE_PIN(pin));

  if (LL_GPIO_IsInputPinSet(GPIO_GET_INSTANCE(gpiox), pin) == 0UL)
  {
    state = HAL_GPIO_PIN_RESET;
  }
  else
  {
    state = HAL_GPIO_PIN_SET;
  }

  return state;
}

void HAL_GPIO_WritePin(hal_gpio_t gpiox, uint32_t pins, hal_gpio_pin_state_t pin_state)
{
  ASSERT_DBG_PARAM(IS_GPIO_PORT(gpiox));
  ASSERT_DBG_PARAM(IS_GPIO_PIN(pins));
  ASSERT_DBG_PARAM(IS_GPIO_PIN_STATE(pin_state));

  if (pin_state != HAL_GPIO_PIN_RESET)
  {
    LL_GPIO_SetOutputPin(GPIO_GET_INSTANCE(gpiox), pins);
  }
  else
  {
    LL_GPIO_ResetOutputPin(GPIO_GET_INSTANCE(gpiox), pins);
  }
}

void  HAL_GPIO_TogglePin(hal_gpio_t gpiox, uint32_t pins)
{
  ASSERT_DBG_PARAM(IS_GPIO_PORT((gpiox)));
  ASSERT_DBG_PARAM(IS_GPIO_PIN(pins));

  LL_GPIO_TogglePin(GPIO_GET_INSTANCE(gpiox), pins);
}

hal_status_t  HAL_GPIO_LockPin(hal_gpio_t gpiox, uint32_t pins)
{
  hal_status_t status = HAL_OK;

  ASSERT_DBG_PARAM(IS_GPIO_PORT(gpiox));
  ASSERT_DBG_PARAM(IS_GPIO_PIN(pins));

  GPIO_TypeDef  *p_gpio = GPIO_GET_INSTANCE(gpiox);

  /* In case of GPIO port, can lock all selected pins in one shot */
  LL_GPIO_LockPin(p_gpio, pins);

  if (LL_GPIO_IsAnyPinLocked(p_gpio) == 0UL)
  {
    status = HAL_ERROR;
  }

  return status;
}
